[package]
name = "geckopanda"
description = "Save and load files from local disk, Google Drive, or Amazon S3."
license = "Unlicense"
repository = "https://github.com/ArielHorwitz/geckopanda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version="1", features=["full"] }
async-trait = "0.1.73"
rust-s3 = "0.33"
google-drive3 = "5.0.2"
mime = "0.3.17"
tempfile = "3.7.1"
webbrowser = "0.8.11"
