[package]
name = "geckopanda"
description = "Save and load files from local disk, Google Drive, or Amazon S3."
version = "0.1.0"
repository = "https://github.com/ArielHorwitz/geckopanda"
documentation = "https://docs.rs/geckopanda/0.1.0/geckopanda"
authors = ["Ariel Horwitz <dev@ariel.ninja>"]
license = "Unlicense"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version="1", features=["full"] }
async-trait = "0.1.73"
rust-s3 = "0.33"
google-drive3 = "5.0.2"
mime = "0.3.17"
tempfile = "3.7.1"
webbrowser = "0.8.11"
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
